--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,14 @@
             <artifactId>log4j-slf4j2-impl</artifactId>
             <version>2.21.1</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.datatype/jackson-datatype-jsr310 -->
+        <dependency>
+            <groupId>com.fasterxml.jackson.datatype</groupId>
+            <artifactId>jackson-datatype-jsr310</artifactId>
+            <version>2.16.0</version>
+        </dependency>
+
+
     </dependencies>
 
     <properties>
